Added a new option for password via environment - Closes #2